[gd_scene load_steps=5 format=3 uid="uid://ctwhv2jqo81fx"]

[ext_resource type="Script" uid="uid://cwuq3c5doh7fr" path="res://scenes/main_menu.gd" id="1_l6cm7"]
[ext_resource type="FontFile" uid="uid://bdv63j8uyr1xu" path="res://assets/fonts/ThaleahFat.ttf" id="2_ekxnf"]

[sub_resource type="InputEventKey" id="InputEventKey_ekxnf"]
device = -1
keycode = 81
unicode = 113

[sub_resource type="Shortcut" id="Shortcut_bqqt6"]
events = [SubResource("InputEventKey_ekxnf")]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_l6cm7")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.87999, 0.827675, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 57.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_ekxnf")
theme_override_font_sizes/normal_font_size = 130
bbcode_enabled = true
text = "[wave]Survive in
a Post Apocalypse"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = 109.0
offset_right = 350.0
offset_bottom = 255.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="easyButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 60
text = "easy"

[node name="normalButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 60
text = "normal"

[node name="hardButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 60
text = "hard"

[node name="quitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_ekxnf")
theme_override_font_sizes/font_size = 60
shortcut = SubResource("Shortcut_bqqt6")
text = "quit"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/easyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/normalButton" to="." method="_on_normal_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/hardButton" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quitButton" to="." method="_on_quit_button_pressed"]
